--- a/style.css
+++ b/style.css
@@ -10,17 +10,17 @@
 
 /* Navbar Start */
 #navbar{
-    background: #f9f9f9;
+    background: #6e6d6d;
 }
 #logo{
     font-size: 36px;
     font-weight: 550;
-    color: black;
+    color: rgb(211, 204, 204);
     text-shadow: 0px 1px 1px black;
     margin-bottom: 5px;
 }
 #logo span{
-    color: #ffa500;
+    color: #037244;
 }
 .navbar-toggler span{
     color: #ffa500;
@@ -31,7 +31,7 @@
 .nav-item .nav-link{
     font-size: 16px;
     font-weight: 550;
-    color: black;
+    color: rgb(178, 181, 189);
     letter-spacing: 1px;
     border-radius: 3px;
     transition: 0.5s ease;
