--- a/style.css
+++ b/style.css
@@ -79,17 +79,12 @@
     animation: changetext 10s infinite linear;
 }
 @keyframes changetext{
-    0%{content: "France";}
-    10%{content: "Spain";}
-    20%{content: "United States";}
-    30%{content: "China";}
-    40%{content: "India";}
-    50%{content: "Pakistan";}
-    60%{content: "Italy";}
-    70%{content: "Turkey";}
-    80%{content: "Mexico";}
-    90%{content: "Germany";}
-    100%{content: "United kingdom";}
+    0%{content: "Column";}
+    20%{content: "Beam";}
+    40%{content: "Foundation";}
+    60%{content: "Slab";}
+    80%{content: "Retaining Wall";}
+    100%{content: "Steel";}
 } 
 .home .content p{
     color: white;
