--- a/style.css
+++ b/style.css
@@ -50,10 +50,11 @@
 /* Home Section Start */
 .home{
     width: 100%;
-    height: 90vh;
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.2)), url(./images/background\ img.png);
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(129, 124, 124, 0.2)), url(./images/background\ img.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 .home .content{
     text-align: center;
@@ -196,7 +197,7 @@
     text-shadow: 0px 1px 1px black;
 }
 .main-txt h1 span{
-    color: #ffa500;
+    color: #037244;
 }
 .packages .card{
     border-radius: 5px;
@@ -228,7 +229,7 @@
 .packages .card .card-body a{
     padding: 10px;
     text-decoration: none;
-    background: #ffa500;
+    background: #037244;
     color: white;
     border-radius: 5px;
 }
@@ -250,7 +251,7 @@
 .services .card i{
     font-size: 80px;
     text-align: center;
-    color: #ffa500;
+    color: #037244;
     margin-top: 20px;
 }
 .services .card .card-body h3{
@@ -310,9 +311,9 @@
     height: 38px;
     border: none;
     border-radius: 5px;
-    background: #ffa500;
+    background: #037244;
     color: white;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     font-weight: 550;
     transition: 0.5s ease;
     cursor: pointer;
@@ -335,7 +336,7 @@
     width: 100%;
     margin-top: 150px;
     text-align: center;
-    background: #f9f9f9;
+    background: #d6d3d3;
 }
 #footer h1{
     font-weight: 600;
@@ -343,7 +344,7 @@
     text-shadow: 0px 0px 1px black;
 }
 #footer h1 span{
-    color: #ffa500;
+    color: #037244;
 }
 .social-links i{
     padding: 10px;
