--- a/assets/style.css
+++ b/assets/style.css
@@ -50,6 +50,25 @@ body
 {
     padding-top: 70px;
 }
+
+
+.HomeTutorial{
+    padding-top: 70px;
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(71, 114, 78, 0.3),rgba(132, 204, 159, 0.2));
+
+}
+
+.youtubePlayer
+{
+    aspect-ratio: 16/9;
+    width: 100%;
+    border: none;
+}
+
+
+
 /* Home Section Start */
 .home{
     padding-top: 100px;
@@ -294,6 +313,27 @@ body
     transition: 0.5s;
 }
 .gallary .card img:hover{
+    transform: scale(1.1);
+}
+/* Section Gallary End */
+
+
+
+/* Section Gallary Start */
+.report{
+    padding-top: 100px;
+    margin-top: 50px;
+}
+.report .card{
+    border-radius: 10px;
+    box-shadow: rgba(0,0,0,0.1) 0px 4px 12px;
+    cursor: pointer;
+}
+.report .card img{
+    border-radius: 10px;
+    transition: 0.5s;
+}
+.report .card img:hover{
     transform: scale(1.1);
 }
 /* Section Gallary End */
